# xorblast

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  xorblast.cpp
test/: cnf2smt.py  gen_test.py  test.sh
